<resources>
    <string name="app_name">Project Sparks</string>
    <string name="basic_banking_app">BASIC BANKING APP</string>
    <string name="name">Name</string>
    <string name="account_number">Account Number</string>
    <string name="email">Email</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="current_balance">Current Balance</string>
    <string name="transfer_money">Transfer Money</string>
    <string name="all_users">ALL USERS</string>
    <string name="select_recipient">SELECT THE RECIPIENT</string>

    <string name="from_format">From:  %s</string>
    <string name="to_format">To:  %s</string>
    <string name="amount_format">₹ %d</string>

    <string name="failure">Failed</string>
    <string name="success">Success</string>
    <string name="transactions">Transactions</string>
</resources>